[package]
name = "pb-to-json"
version = "0.1.1"
edition = "2021"
authors = ["Script-Ware"]
description = "Simple protocol buffer to JSON conversion"
readme = "README.md"
repository = "https://github.com/ScriptWare-Software/pb-to-json"
keywords = ["protobuf", "json", "conversion"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"